<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:background="@drawable/cardviewlike"
    android:descendantFocusability="afterDescendants">

    <TableLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tablelayout1">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:paddingBottom="@dimen/widget_text_field_padding"
                android:paddingTop="@dimen/widget_text_field_padding"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_coordy"
                android:textColor="@android:color/white"
                android:id="@+id/tv_coordy_label"
                android:labelFor="@+id/tv_CoordY"/>

            <TextView
                android:paddingBottom="@dimen/widget_text_field_padding"
                android:paddingTop="@dimen/widget_text_field_padding"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/no_text"
                android:textColor="@android:color/white"
                android:id="@+id/tv_CoordY"
                android:gravity="right" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:paddingBottom="@dimen/widget_text_field_padding"
                android:paddingTop="@dimen/widget_text_field_padding"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/widget_coordx"
                android:textColor="@android:color/white"
                android:id="@+id/tv_coordx_label"
                android:labelFor="@+id/tv_CoordX"/>

            <TextView
                android:paddingBottom="@dimen/widget_text_field_padding"
                android:paddingTop="@dimen/widget_text_field_padding"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="@dimen/widget_label_text_size"
                android:text="@string/no_text"
                android:textColor="@android:color/white"
                android:id="@+id/tv_CoordX"
                android:gravity="right" />

        </TableRow>
        <TableRow>
            <Button
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Get new coordinates"
                android:textColor="@android:color/white"
                android:background="#205E69"
                android:id="@+id/getcoordinates"
                android:layout_weight="1" />
        </TableRow>
    </TableLayout>

</RelativeLayout>